--- a/src/Map.css
+++ b/src/Map.css
@@ -45,9 +45,9 @@
 }
 
 .card-container {
-  width: 20vw;
+  width: 280px;
   position: absolute;
-  bottom: 9vh;
+  bottom: 5vh;
   left: 10px;
   z-index: 1000;
   background-color: #ffffffc2;
@@ -55,9 +55,9 @@
   border-radius: 5px;
 }
 .button-container{
-  width: 20vw;
+  width: 280px;
   position: absolute;
-  bottom: 9vh;
+  bottom: 5vh;
   left: 10px;
   z-index: 1000;
   padding: 5px;
@@ -102,6 +102,7 @@
   font-weight: bold;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
   transform-style: preserve-3d;
+  margin-top: 10px;
 }
 
 .flag-button span {
