Improved dropdown list - country search bar

--- a/src/Map.css
+++ b/src/Map.css
@@ -1,29 +1,17 @@
-.dropdown-container {
+/*.dropdown-container {
   padding: 5px;
   margin-top: 15px;
   right: 15px;
   position: absolute;
-  top: 20px;
+  top: 50px;
   right: 10px;
   z-index: 1000;
-  /*
-    width: 200px;
-    z-index: 10000;
-    background-color: #ffffffc2;
-    text-align: left;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    */
-}
-
-.map-container {
-  position: relative;
 }
 
 .switch-container {
   position: absolute;
   white-space: normal;
-  top: 120px;
+  top: 20px;
   right: 10px;
   z-index: 1000;
   background-color: #ffffff;
@@ -32,6 +20,35 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: 14px;
 }
+
+*/
+.top-right-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  z-index: 1000;
+  
+}
+.dropdown-container{
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.switch-container {
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+}
+
+.map-container {
+  position: relative;
+}
+
+
 
 .slider-container {
   width: 20vw;
